--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "form-data": "^4.0.0"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
