--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "date-and-time": "^2.4.1",
     "form-data": "^4.0.0",
+    "localbase": "^0.7.5",
     "lodash": "^4.17.21",
     "logger": "^0.0.1",
     "react": "^18.2.0",
