--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatapp",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://192.168.0.109:5000",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
